# sanulimestari

./: .gitignore  LICENSE  README.md  extension.pem  pyproject.toml
extension/: content-script.js  manifest.json  package-lock.json  popup.js  sanulimestari.html
extension/cypress/e2e/: sanulimestari.cy.js
sanulimestari/: __init__.py
test/: test_sanulimestari.py  word_list.xml
