[tool.poetry]
name = "sanulimestari"
version = "0.1.0"
description = ""
authors = ["Joonas Harjumäki <jharjuma@gmail.com>"]
packages = [
    { include = "sanulimestari", from = "." },
]

[tool.poetry.dependencies]
python = "^3.7"
pytest-profiling = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
